前端根据浏览器时区显示对应时间；用户操作日志前端标签中参数值写错导致页面报错修改；

--- a/logrecord/templates/log_list.html
+++ b/logrecord/templates/log_list.html
@@ -37,7 +37,7 @@
                     <div class="col-md-6">
                         <form class="input-group">
                             <input class="form-control" name="search" type="text" value="{{ search }}"
-                                   placeholder="{% url '用户名' %}">
+                                   placeholder="用户名">
                             <button class="btn btn-sm btn-outline-primary" type="submit">{% translate '搜索' %}</button>
                         </form>
                     </div>
