--- a/device/templates/pci_list.html
+++ b/device/templates/pci_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load tz %}
 {% load static %}
 {% load i18n %}
 {% load  sizeformat %}
@@ -96,7 +97,9 @@
                         <td>{{ dev.host.ipv4 }}</td>
                         {% if dev.vm %}
                             <td>{{ dev.vm.ipv4 }}</td>
+                            {% timezone request.session.useTimeZone|default:'UTC' %}
                             <td>{{ dev.attach_time | date:'Y-m-d H:i:s' }}</td>
+                            {% endtimezone %}
                         {% else %}
                             <td>{% translate '未挂载' %}</td>
                             <td>{% translate '无' %}</td>
