--- a/image/templates/image_list.html
+++ b/image/templates/image_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load tz %}
 {% load static %}
 {% load i18n %}
 {% load  sizeformat %}
@@ -227,8 +228,10 @@
                                     </div>
                                     <div class="form-group row">
                                         <label for="name" class="col-sm-1 col-form-label">{% translate '创建时间' %}</label>
+                                        {% timezone request.session.useTimeZone|default:'UTC' %}
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="name">{{ image.create_time }}</span>
+                                        {% endtimezone %}
                                         <label for="version" class="col-sm-1 col-form-label">{% translate '更新时间' %}</label>
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="version">{{ image.update_time }}</span>
