--- a/vdisk/templates/vdisk_list.html
+++ b/vdisk/templates/vdisk_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load tz %}
 {% load static %}
 {% load i18n %}
 {% load  sizeformat %}
@@ -108,14 +109,18 @@
                             <td>{{ disk.quota }}</td>
                             <td>{{ disk.size|sizeformat:'GB' }}</td>
                             <td>{{ disk.user }}</td>
+                            {% timezone request.session.useTimeZone|default:'UTC' %}
                             <td>{{ disk.create_time|date:'Y-m-d H:i:s' }}</td>
+                            {% endtimezone %}
                             {% if disk.vm %}
                                 {% if disk.vm.mac_ip %}
                                 <td>{{ disk.vm.ipv4 }}</td>
                                 {% else %}
                                 <td>{% translate '无' %}</td>
                                 {% endif %}
+                                {% timezone request.session.useTimeZone|default:'UTC' %}
                                 <td>{{ disk.attach_time|date:'Y-m-d H:i:s' }}</td>
+                                {% endtimezone %}
                             {% else %}
                                 <td>{% translate '未挂载' %}</td>
                                 <td>{% translate '无' %}</td>
