--- a/vpn/templates/vpn_list.html
+++ b/vpn/templates/vpn_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load tz %}
 {% load i18n %}
 {% load static %}
 
@@ -72,8 +73,10 @@
                                 <i class="fa fa-times"></i>
                             {% endif %}
                         </td>
+                        {% timezone request.session.useTimeZone|default:'UTC' %}
                         <td>{{ obj.create_time|date:'Y-m-d H:i:s' }}</td>
                         <td>{{ obj.modified_time|date:'Y-m-d H:i:s' }}</td>
+                        {% endtimezone %}
 {#                        <td>{{ obj.expired_time|date:'Y-m-d H:i:s' }}</td>#}
                         <td>{{ obj.create_user}}</td>
                         <td>{{ obj.remarks}}</td>
